# stark-skills

./: .gitignore  LICENSE  README.md  SKILL.md
.github/workflows/: pii-gate.yml
docs/: contributing.md  install.md  multi-agent-workflows.md  optimal-setup.md  redaction-map.example.yml  redaction-policy.md  repository-integrations.md  voice-workflows.md
mcp-servers/qwen-serve/: .gitignore  README.md  pyproject.toml
mcp-servers/qwen-serve/src/qwen_serve_mcp/: __init__.py  client.py  executor_prompt.py  http_server.py  server.py
mcp-servers/qwen-serve/tests/: fake_qwen_serve.py  test_session_flow.py
scripts/: _redact.py  install-all.sh  install-claude.sh  install-opencode.sh  install-pi.sh  inventory-skills.sh  link-repo-integrations.sh  redact-skill.sh  validate-no-pii.sh
scripts/git-pii-guard/: SKILL.md  git-pii-guard.skill
scripts/git-pii-guard/scripts/: install_hook.sh  pii_scan.py
skills/core/commands/: audit.md  careful.md  check.md  checkpoint.md  commit.md  cplan.md  discord.md  git-status.md  guard.md  handoff.md  home.md  hook.md  investigate.md  iterm.md  lms-warm.md  load.md  mobile.md  plan-design-review.md  plan-eng-review.md  plan.md  recall.md  review.md  save.md  ship.md  slack.md  status.md  todo.md  tunnels.md  verify.md  yolo.md
skills/core/debugging/: SKILL.md
skills/core/handoff/: SKILL.md
skills/core/memory/: load.md  save.md
skills/core/planning/: SKILL.md
skills/templates/: adapter.md  command.md  config.env.example  skill.md  voice-config.example.yml
skills/voice/: README.md
tests/: validate-layout.sh
(+159 files in other folders)
